  is used. This could, for example, be used to update address
  information in a ZooKeeper database.

- Client storagers have a method, new_addr, that can be used to change
  the server address(es). This can be used, for example, to update a
  dynamically determined server address from information in a
  ZooKeeper database.

Bugs Fixed
----------

- Pinned the ``transaction`` and ``manuel`` dependencies to Python 2.5-
  compatible versions when installing under Python 2.5.

3.10.5 (2011-11-19)
===================

Bugs Fixed
----------

- Conflict resolution failed when state included cross-database
  persistent references with classes that couldn't be imported.

3.10.4 (2011-11-17)
===================

Bugs Fixed
----------

- Conflict resolution failed when state included persistent references
  with classes that couldn't be imported.

3.10.3 (2011-04-12)
===================

Bugs Fixed
----------

- "activity monitor not updated for subconnections when connection
  returned to pool"

  https://bugs.launchpad.net/zodb/+bug/737198

- "Blob temp file get's removed before it should",
  https://bugs.launchpad.net/zodb/+bug/595378

  A way this to happen is that a transaction is aborted after the
  commit process has started. I don't know how this would happen in
  the wild.

  In 3.10.3, the ZEO tpc_abort call to the server is changed to be
  synchronous, which should address this case. Maybe there's another
  case.


Performance enhancements
------------------------

- Improved ZEO client cache implementation to make it less likely to
  evict objects that are being used.

- Small (possibly negligable) reduction in CPU in ZEO storage servers
  to service object loads and in networking code.

3.10.2 (2011-02-12)
===================

Bugs Fixed
----------

- 3.10 introduced an optimization to try to address BTree conflict
  errors arrising for basing BTree keys on object ids. The
  optimization caused object ids allocated in aborted transactions to